import 'package:realm/realm.dart';

part 'conversation.realm.dart';

/// Represents a conversation between two users, stored in the user realm's conversations collection.
///
/// ## Attributes
/// - `username`: The username of the other user in the conversation.
/// - `messages`: A list of [PlaintextMessage] exchanged between the two users.
@RealmModel()
class _Conversation {
  @PrimaryKey()
  late String username;

  late List<_PlaintextMessage> messages;
}

/// Represents a plain text message that is stored in the user's Realm database. This is used to store messages locally for persistence.
///
/// ## Attributes:
/// - [id]: The unique identifier of the message (generated by the client).
/// - [content]: The text of the message.
/// - [own]: A boolean flag indicating if the message was sent by the user. This is used to differentiate between sent and received messages, and allows for different styling in the UI.
/// - [receiver]: The identifier of the recipient of the message. This is used to group messages by conversation.
/// - [sentAt]: The timestamp of when the message was sent. This is used to sort messages by time, and display timestamps on the UI accordingly.
@RealmModel()
class _PlaintextMessage {
  @PrimaryKey()
  late String id;
  late String content;
  late bool own;
  late String? receiver;
  late DateTime sentAt;
  late String?
      statusString; // if null, message is from someone else (we only want to store status for sent messages)

  Status? get status => statusString != null
      ? StatusExtension.fromShortString(statusString!)
      : null;
  set status(Status? status) => statusString = status?.toShortString();
}

enum Status { pending, sent, received, read, error }

// Realm does not support enums, so we have to do this workaround
// Extension method to convert Status to string
extension StatusExtension on Status {
  String toShortString() {
    return toString().split('.').last;
  }

  /// Converts a string to a [Status] enum.
  static Status fromShortString(String statusString) {
    return Status.values.firstWhere((s) => s.toShortString() == statusString);
  }
}
